# mutated_price_finder

./: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  check_hangar.py  contract_turnover.py  find_prices.py  find_prices_multi.py  killmail_demand.py  pyproject.toml  requirements.txt  roi_calculator.py  top_10_mutations.md  train_price_model.py
config/: attributes.yaml  constants.yaml
config/targets/: afterburners.yaml  armor_plates.yaml  ballistic_controls.yaml  cap_batteries.yaml  damage_controls.yaml  ddas.yaml  entropic_sinks.yaml  gyrostabilizers.yaml  heat_sinks.yaml  mag_stabs.yaml  shield_boosters.yaml  shield_extenders.yaml  warp_disruptors.yaml  webs.yaml
src/analysis/: __init__.py  backtest.py  monte_carlo.py  regression.py  risk.py
src/cli/: shared.py
src/config/: loader.py
src/data/: __init__.py  everef.py  fuzzwork.py
src/formatters/: __init__.py  isk.py  stats.py
src/models/: __init__.py  training.py  xgboost_manager.py
src/utils/: __init__.py  http.py
tests/: conftest.py
tests/fixtures/: fuzzwork_prices.json
tests/integration/: __init__.py  conftest.py  test_data_pipeline.py
tests/unit/: test_config_loader.py  test_everef.py  test_formatters.py  test_fuzzwork.py  test_monte_carlo.py  test_regression.py  test_risk.py  test_training.py
